Change form popup into modal with blurry backdrop and fix grid template rows

--- a/style.css
+++ b/style.css
@@ -18,28 +18,38 @@ body > div:nth-child(2){
     padding: 5px;
 }
 
-body > div:nth-last-child(2) {
-    display: grid;
-    grid-template-rows: 1fr 5fr;
-}
-
 form {
+    position: fixed;
+    left: 38vw;
+    top: 38vh;
     background-color: rgb(92, 94, 94);
-    padding: 0 20px;
-    grid-template-columns: repeat(4, 2fr) 1fr;
-    align-items: center;
+    padding: 20px 40px;
     display: none;
 }
 
+form > div {
+    padding: 5px 0;
+}
+
 form > div:last-child {
-    justify-self: end;
+    justify-self: center;
+}
+
+.backdrop {
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: rgba(129, 125, 80, 0);
+    backdrop-filter: blur(3px);
 }
 
 .book-display {
     display: grid;
-    grid-template-columns: repeat(auto-fill, 19.7vw);
-    grid-template-rows: repeat(auto-fill, 47.4vh);
-    grid-auto-rows: 47.4vh;
+    grid-template-columns: repeat(auto-fit, 19.7vw);
+    grid-template-rows: repeat(auto-fit, 47vh);
+    grid-auto-rows: 47vh;
     gap: 5px;
 }
 
